specifyweb/frontend/js_src/css/workbench.css
@import 'handsontable/styles/handsontable.css';
@import 'handsontable/styles/ht-theme-classic.css';

.ht-theme-classic,
.ht-theme-classic-dark,
.ht-theme-classic-dark-auto {
  --ht-font-family: var(
    --form-font-family,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    sans-serif
  );
  --ht-font-size: 100%;
  --ht-font-size-small: 85%;
  --ht-line-height: 18px;
  --ht-line-height-small: 16px;
  --ht-font-weight: 400;
  --ht-header-font-weight: 500;
  --ht-letter-spacing: normal;
  --ht-read-only-color: theme('colors.gray.600');
  --ht-cell-read-only-background-color: theme('colors.gray.200');
  --ht-comments-indicator-color: theme('colors.black');
}

.handsontable .columnSorting {
  @apply leading-5;
}

/* Sorting direction */
.handsontable .columnSorting::before {
  @apply !static order-2 !mt-1 !bg-center pr-1;
}

/* Sorting priority index */
.handsontable .columnSorting::after {
  @apply !static order-2 !mt-2 -ml-2;
}

/* Highlighted cells' headers */
.handsontable :is(tbody, thead) th.ht__highlight {
  @apply bg-blue-400;
}

/* Picklists */
.handsontable td .htAutocompleteArrow {
  @apply cursor-pointer text-black dark:text-white;
}

.handsontable td .htAutocompleteArrow:hover {
  @apply text-gray-500;
}

/* CONTENT styles */
.wbs-form.wb-show-upload-results
  .wb-no-match-cell
  .wbs-form.wb-show-upload-results
  .wb-updated-cell
  .wbs-form.wb-show-upload-results
  .wb-deleted-cell
  .wbs-form.wb-show-upload-results
  .wb-matched-and-changed-cell
  .wbs-form.wb-focus-coordinates
  .wb-coordinate-cell {
  @apply text-black dark:text-white;
}

.handsontable .wb-unmapped-cell {
  @apply !bg-gray-200 !text-gray-600 dark:!bg-neutral-700 dark:!text-neutral-300;
}

.handsontable .htDimmed {
  @apply !bg-gray-200 !text-gray-600 dark:!bg-neutral-700 dark:!text-neutral-300;
}

/* Cell navigation */

.wbs-form
  :is(
    .wb-no-match-cell,
    .wb-modified-cell,
    .htCommentCell,
    .wb-search-match-cell,
    .wb-updated-cell,
    .wb-deleted-cell,
    .wb-matched-and-changed-cell
  ),
.wb-navigation-section {
  @apply !bg-[color:var(--accent-color)];
}

/* The order here determines the priority of the states
 * From the lowest till the highest */
.wbs-form:not(.wb-hide-new-cells) .wb-updated-cell,
.wb-navigation-section[data-navigation-type='updatedCells'] {
  --accent-color: var(--updated-cell);
}

.wbs-form:not(.wb-hide-new-cells) .wb-deleted-cell,
.wb-navigation-section[data-navigation-type='deletedCells'] {
  --accent-color: var(--deleted-cell);
}

.wbs-form:not(.wb-hide-new-cells) .wb-matched-and-changed-cell,
.wb-navigation-section[data-navigation-type='matchedAndChangedCells'] {
  --accent-color: var(--matched-and-changed-cell);
}

.wbs-form:not(.wb-hide-new-cells) .wb-no-match-cell,
.wb-navigation-section[data-navigation-type='newCells'] {
  --accent-color: var(--new-cell);
}

.wbs-form:not(.wb-hide-invalid-cells) .htCommentCell,
.wb-navigation-section[data-navigation-type='invalidCells'] {
  --accent-color: var(--invalid-cell);
}

.wbs-form:not(.wb-hide-modified-cells) .wb-modified-cell,
.wb-navigation-section[data-navigation-type='modifiedCells'] {
  --accent-color: var(--modified-cell);
}

.wbs-form:not(.wb-hide-search-results) .wb-search-match-cell,
.wb-navigation-section[data-navigation-type='searchResults'] {
  --accent-color: var(--search-result);
}

/* 
 * Override default font properties: required for handsontable 10 and above
 * See: https://github.com/handsontable/handsontable/pull/8681
 */
.handsontable {
  @apply text-inherit;
  font-family: var(--form-font-family, inherit);
  font-size: inherit;
}

.ht-root-wrapper {
  font-family: var(--form-font-family, inherit);
  font-size: inherit;
}

.dark .ht-theme-classic {
  color-scheme: dark;
  --ht-border-color: theme('colors.neutral.500');
  --ht-foreground-color: theme('colors.neutral.100');
  --ht-foreground-secondary-color: theme('colors.neutral.400');
  --ht-background-color: theme('colors.neutral.800');
  --ht-background-secondary-color: theme('colors.neutral.900');
  --ht-placeholder-color: theme('colors.blue.500');
  --ht-read-only-color: theme('colors.neutral.300');
  --ht-cell-read-only-background-color: theme('colors.neutral.700');
  --ht-disabled-color: theme('colors.neutral.500');
  --ht-header-background-color: theme('colors.neutral.900');
  --ht-header-foreground-color: theme('colors.white');
  --ht-header-highlighted-background-color: theme('colors.neutral.800');
  --ht-header-row-background-color: theme('colors.neutral.900');
  --ht-header-row-highlighted-background-color: theme('colors.neutral.800');
  --ht-cell-editor-background-color: theme('colors.neutral.600');
  --ht-cell-editor-foreground-color: theme('colors.white');
  --ht-menu-border-color: theme('colors.neutral.500');
  --ht-menu-shadow-color: theme('colors.neutral.500');
  --ht-scrollbar-track-color: theme('colors.neutral.900');
  --ht-scrollbar-thumb-color: theme('colors.neutral.500');
  --ht-comments-indicator-color: theme('colors.white');
}

/* Handsontable dark mode */
.handsontable td,
.htContextMenu table tbody tr td {
  @apply dark:border-neutral-500 dark:bg-neutral-800;
}

.htContextMenu table tbody tr td {
  @apply dark:text-white;
}

.htContextMenu table tbody tr td.htDisabled {
  @apply dark:text-neutral-500;
}

.htContextMenu td.highlight,
.handsontable.listbox tr td.current,
.handsontable.listbox tr:hover td {
  @apply dark:!bg-neutral-600;
}

.handsontable td.htCustomMenuRenderer,
.htContextMenu td.htDisabled:hover {
  @apply dark:!bg-neutral-800;
}

.handsontable th {
  @apply dark:!border-neutral-800 dark:bg-neutral-900 dark:text-white;
}

.handsontable tr:first-child td {
  @apply dark:!border-t-neutral-600;
}

.handsontable td:first-of-type {
  @apply dark:!border-l-neutral-600;
}

.htContextMenu table.htCore,
.htContextMenu td.htSeparator {
  @apply dark:!border-neutral-500;
}

.htCommentTextArea {
  @apply cursor-auto dark:border-none dark:bg-neutral-800 dark:text-white bg-black;
}

.htCommentCell:after {
  @apply !border-t-black dark:!border-t-white;
}

.handsontableInput {
  @apply bg-neutral-600 text-white;
}

/*
 * Handsontable allows customizing classNames of various components, but it
 * doesn't allow setting more than one className
 * See https://github.com/handsontable/handsontable/discussions/7738
 */
.htPlaceholder {
  @apply text-blue-500;
}

/* Prevent horizontal scroll from triggering "go to previous browser page" */
.wtHolder {
  @apply overscroll-contain;
}

